@@ -6,6 +6,9 @@ versions of Red5.
 
 Red5 0.6    (unreleased)
 ------------------------
+Bugfixes:
+- ghost connection detection code rewritten to better detect dead clients
+  (Jira APPSERVER-38, SN-37)
 
 
 Red5 0.6rc3 (2007-04-11)
